# SAT-MPI

./: CMakeLists.txt  cdcl.cpp  dp.cpp  dpll.cpp  grasp.cpp  resolution.cpp  run_all.sh  sat_utils.h
